@@ -42,21 +42,6 @@ GitDocs = {
     var el = $('.content').prepend('<div class="alert-message ' + result +
       '"><a class="close" href="#">×</a>' + body + '</div>');
     $('div.alert-message').alert();
-  },
-  // To make the settings form ajax-y
-  observeSettingsForm : function() {
-    $('#settings').submit(function(e) {
-      e.preventDefault();
-      $.ajax({
-        type: 'POST',
-        url: this.action,
-        data: $(this).serialize(),
-        success: function() {
-          GitDocs.showAlert('<p><strong>Settings saved!</strong> Gitdocs has been restarted with your new settings.</p>', 'success')
-        }
-      });
-      return false;
-    });
   }
 };
 
@@ -64,7 +49,6 @@ $(document).ready(function() {
   GitDocs.linkBreadcrumbs();
   GitDocs.fillDirMeta();
   StringFormatter.autoLink();
-  GitDocs.observeSettingsForm();
 });
 
 // Redirect to edit page for new file when new file form is submitted
