@@ -1,6 +1,7 @@
 0.4.9 (12/29/2011)
 
   * Adds configuration for web port in settings
+  * Adds support for 'add' and 'remove' shares in settings
 
 0.4.8 (12/29/2011)
 
